# gerador-de-senhas

./: CNAME  Cargo.toml  Dioxus.toml  Makefile  README.md  index.html
assets/: senhas_bg-c1741467393086f2.wasm.br
assets/rustdb/: Cargo.toml
assets/rustdb/src/: main.rs
docs/: index.html
docs/assets/: senhas-34b6493d8abc087c.js  senhas-34b6493d8abc087c.js.br  senhas-6962acb081a2115b.js  senhas-6962acb081a2115b.js.br  senhas_bg-43188779409b7358.wasm  senhas_bg-43188779409b7358.wasm.br  senhas_bg-c1741467393086f2.wasm
senhas/public/: index.html
senhas/public/assets/: senhas-4474117fa1b159b3.js  senhas-4474117fa1b159b3.js.br  senhas_bg-e5d3b8efb20abc7a.wasm  senhas_bg-e5d3b8efb20abc7a.wasm.br
src/: main.rs
